# rp2040-boilerplate

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  sum.c
